# custom-mini-vm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  code.txt
docs/: issembly.md
include/: instruction.h  logger.h  parser.h  program.h  symbol_table.h  vm.h
src/: logger.c  main.c  parser.c  symbol_table.c  vm.c
tests/: run_test.sh
tests/negative/: test_invalid_reg.txt  test_lowercase.txt  test_missing_comma.txt  test_missing_operands.txt  test_unknown_opcode.txt
tests/positive/: test_add.txt  test_combined.txt  test_eof.txt  test_halt.txt  test_label.txt  test_mov.txt  test_sub.txt  test_zero_flag.txt
